Adds languages support. Reworked README

--- a/config/config.json
+++ b/config/config.json
@@ -4,5 +4,6 @@
     "twitch_bot_username": null,
     "twitch_bot_token": null,
     "twitch_channel_name": null,
-    "osuApiKey": null
+    "osuApiKey": null,
+    "interface_language": null
 }
