--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osubot",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "The osu bot, working with gosumemory",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
     "bancho.js": "^0.9.7",
     "eslint": "^7.20.0",
     "irc": "^0.5.2",
+    "node-reconnect-ws": "^0.2.5",
     "prequest": "^1.0.0",
     "readline-sync": "^1.4.10",
     "twitch-bot": "^1.3.5",
