--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "irc": "^0.5.2",
     "node-reconnect-ws": "^0.2.5",
     "prequest": "^1.0.0",
-    "readline-sync": "^1.4.10",
+    "synchronous-user-input": "0.0.4",
     "twitch-bot": "^1.3.5",
     "websocket": "^1.0.33",
     "ws": "^7.4.3"
