--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "twitch-bot": "^1.3.5",
     "websocket": "^1.0.33",
     "ws": "^7.4.3"
+  },
+  "devDependencies": {
+    "caxa": "^2.0.0"
   }
 }
