--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "irc": "^0.5.2",
     "node-reconnect-ws": "^0.2.5",
     "prequest": "^1.0.0",
+    "ps-list": "^7.2.0",
     "synchronous-user-input": "0.0.4",
     "twitch-bot": "^1.3.5",
     "websocket": "^1.0.33",
