--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The osu bot, working with gosumemory",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node build.js"
   },
   "author": "valnesfjord",
   "license": "ISC",
@@ -16,7 +16,7 @@
     "prequest": "^1.0.0",
     "ps-list": "^7.2.0",
     "synchronous-user-input": "0.0.4",
-    "twitch-bot": "^1.3.5",
+    "tmi.js": "^1.8.3",
     "websocket": "^1.0.33",
     "ws": "^7.4.3"
   },
