--- a/configHandle/defaults/config.json
+++ b/configHandle/defaults/config.json
@@ -5,6 +5,6 @@
     "twitch_bot_token": null,
     "twitch_channel_name": null,
     "osuApiKey": null,
-    "interface_language": null,
-    "gosumemory_folder": null
+    "gosumemory_folder": null,
+    "interface_language": null
 }
