--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "prequest": "^1.0.0",
     "prompts": "^2.4.1",
     "ps-list": "^7.2.0",
-    "tmi.js": "^1.8.3",
-    "websocket": "^1.0.33",
-    "ws": "^7.4.3"
+    "tmi.js": "^1.8.3"
   },
   "devDependencies": {
     "caxa": "^2.0.0"
